# tgd-scrap

./: .gitignore  README.md  pyproject.toml
tgd_my/: scrapy.cfg
tgd_my/tgd_my/: settings.py
tgd_my/tgd_my/spiders/: my.py
