[tool.poetry]
name = "tgd-crawl"
version = "0.1.0"
description = ""
authors = ["Jaehoon You <teslamint@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Scrapy = "^2.11.2"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
